--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="content-grid__columns">
               <div class="grid_column">
                 <div class="content-grid__photo-box">
-                  <img src="img/tim-mossholder-jBK5235avoE-unsplash.jpg" alt="">
+                  <img height="" width="" src="img/tim-mossholder-jBK5235avoE-unsplash.jpg" alt="">
                 </div>
                 <div class="content-grid__text-box">
                   <div class="date">October 19, 2022</div>
@@ -85,7 +85,7 @@
               </div>
               <div class="grid_column">
                 <div class="content-grid__photo-box">
-                  <img src="img/tim-mossholder-jBK5235avoE-unsplash.jpg" alt="">
+                  <img height="" width="" src="img/tim-mossholder-jBK5235avoE-unsplash.jpg" alt="">
                 </div>
                 <div class="content-grid__text-box">
                   <div class="date">October 19, 2022</div>
@@ -96,7 +96,7 @@
               </div>
               <div class="grid_column">
                 <div class="content-grid__photo-box">
-                  <img src="img/thisisengineering-raeng-ntZM993INp0-unsplash.jpg" alt="">
+                  <img height="" width="" src="img/thisisengineering-raeng-ntZM993INp0-unsplash.jpg" alt="">
                 </div>
                 <div class="content-grid__text-box">
                   <div class="date">October 19, 2022</div>
@@ -153,7 +153,7 @@
         </div>
       </main>
       <footer>
-        
+        Created by Vygantas Pauliukonis
       </footer>
     </div>
     
